--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -4,7 +4,10 @@
   "compilerOptions": {
     "outDir": "./out-tsc/app",
     "types": [],
-    "experimentalDecorators": true
+    "experimentalDecorators": true,
+  },
+  "angularCompilerOptions": {
+    "strictTemplates": true,
   },
   "files": [
     "src/main.ts",
